--- a/block-editor.html
+++ b/block-editor.html
@@ -52,6 +52,8 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#menu1" data-toggle="tab">Block</a></li>
 					<li onclick="setSerializeBlock()"><a href="#menu2" data-toggle="tab">Code</a></li>
+					<li><a href="#"><i class="glyphicon glyphicon-play"></i> Run</a></li>
+					<li><a href="#"><i class="glyphicon glyphicon-stop"></i> Stop</a></li>
 				</ul>
 			  </div><!--/.nav-collapse -->
 			</div><!--/.container-fluid -->
