change file names for projecct rename.

--- a/fizz-buzz.html
+++ b/fizz-buzz.html
@@ -16,7 +16,7 @@
     <!-- Custom styles for this template -->
     <link href="lib/css/flat-ui.min.css" rel="stylesheet">
     <link href="lib/css/navbar-fixed-top.css" rel="stylesheet">
-    <link href="lib/css/jquery-sortable.css" rel="stylesheet">
+    <link href="lib/css/soramame.block.css" rel="stylesheet">
 	
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="lib/js/ie8-responsive-file-warning.js"></script><![endif]<!-- 
@@ -229,7 +229,7 @@
     <script src="lib/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="lib/js/ie10-viewport-bug-workaround.js"></script>
-	<script type="text/javascript" src="lib/js/jquery-sortable.js"></script>
+	<script type="text/javascript" src="lib/js/soramame.block.js"></script>
 	
 	<script type="text/javascript" src="lib/js/beautify.js"></script>
 	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
