--- a/fizz-buzz.html
+++ b/fizz-buzz.html
@@ -229,7 +229,7 @@
     <script src="lib/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="lib/js/ie10-viewport-bug-workaround.js"></script>
-	<script type="text/javascript" src="lib/js/soramame.block.js"></script>
+	<script type="text/javascript" src="lib/js/jquery-sortable.js"></script>
 	
 	<script type="text/javascript" src="lib/js/beautify.js"></script>
 	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
