add link to github.

--- a/fizz-buzz.html
+++ b/fizz-buzz.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="lib/img/favicon.ico">
 
-    <title>SoraMame</title>
+    <title>SoraMame Block Editor for Tiny Script</title>
 
     <!-- Bootstrap core CSS -->
     <link href="lib/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
 				  <span class="icon-bar"></span>
 				  <span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">SoraMame</a>
+				<a class="navbar-brand" href="https://github.com/ycatch/SoraMame.Block">SoraMame Block</a>
 			  </div>
 			  <div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
