--- a/fizz-buzz.html
+++ b/fizz-buzz.html
@@ -1,79 +1,75 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="">
-		<meta name="author" content="">
+		<meta name="description" content="This is very small block-type code editor ">
+		<meta name="author" content="Yutaka Kachi">
 		<link rel="icon" href="lib/img/favicon.ico">
 		<title>SoraMame Block Editor for Tiny Script</title>
-		
+
 		<!-- Bootstrap core CSS -->
 		<link href="lib/css/bootstrap.min.css" rel="stylesheet">
-		
+
 		<!-- Custom styles for this template -->
+		<link href="lib/css/dashboard.css" rel="stylesheet">
 		<link href="lib/css/flat-ui.min.css" rel="stylesheet">
-		<link href="lib/css/navbar-fixed-top.css" rel="stylesheet">
 		<link href="lib/css/soramame.block.css" rel="stylesheet">
-		
-		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<link href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css"/ rel="stylesheet">
+
+		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-		
-		<!-- Syntax Highlighter -->
-		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css"/>
+
 	</head>
 	<body>
-		<div class="container">
-			<!-- Start Static navbar -->
-			<div class="navbar navbar-inverse navbar-embossed navbar-fixed-top" role="navigation">
-				<div class="container-fluid">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<a class="navbar-brand" href="https://github.com/ycatch/SoraMame.Block">SoraMame Block</a>
-					</div>
-					<div class="navbar-collapse collapse">
-						<ul class="nav navbar-nav">
-							<li class="active">
-								<a href="#menu1" data-toggle="tab">Block</a>
-							</li>
-							<li onclick="SORAMAME_BLOCK.setSerializeBlock()">
-								<a href="#menu2" data-toggle="tab">Code</a>
-							</li>
-							<li>
-								<a href="javascript:void(0)" onclick="SORAMAME_BLOCK.execCodeBlock(); return false;">
-									<i class="glyphicon glyphicon-play"></i>Run
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<i class="glyphicon glyphicon-stop"></i>Stop
-								</a>
-							</li>
-						</ul>
-					</div>
-					<!--/.nav-collapse -->
+		<!-- Start Static navbar -->
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="https://github.com/ycatch/SoraMame.Block">SoraMame Block</a>
 				</div>
-				<!--/.container-fluid -->
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li class="active">
+							<a href="#menu1" data-toggle="tab">Block</a>
+						</li>
+						<li onclick="SORAMAME_BLOCK.setSerializeBlock()">
+							<a href="#menu2" data-toggle="tab">Code</a>
+						</li>
+						<li>
+							<a href="javascript:void(0)" onclick="SORAMAME_BLOCK.execCodeBlock(); return false;">
+								<i class="glyphicon glyphicon-play"></i>Run
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="glyphicon glyphicon-stop"></i>Stop
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
-			<!-- End Static navbar -->
-			<!-- Main component -->
+		</nav>
+		<!-- End Static navbar -->
+		<div class="container-fluid">
 			<div class="row">
 				<!-- tab body -->
 				<div class="tab-content">
-					<!-- tab body #1 -->
+					<!-- tab item #1 -->
 					<div class="tab-pane fade in active" id="menu1">
-						<!-- start code palette -->
-						<div class="col-md-2">
-							<div class="sidebar-nav affix" role="complementary">
+						<!-- start sidebar -->
+						<div class="col-sm-3 col-md-3 sidebar">
+							<div class="sidebar-nav" role="complementary">
 								<div class="panel-group" id="accordion">
 									<!-- start panel -->
 									<div class="panel panel-default">
@@ -105,6 +101,12 @@
 										<div id="collapse12" class="panel-collapse collapse">
 											<div class="panel-body">
 												<ol class="pallet-code block connect-area">
+													<li class="if-block">if ()</li>
+													<li class="if-block">else if ()</li>
+													<li class="if-block">else</li>
+													<li class="if-block">if ()</li>
+													<li class="if-block">else if ()</li>
+													<li class="if-block">else</li>
 													<li class="if-block">if ()</li>
 													<li class="if-block">else if ()</li>
 													<li class="if-block">else</li>
@@ -155,9 +157,10 @@
 								<!-- panel-group -->
 							</div>
 						</div>
-						<!-- end code palette -->
+						<!-- end of side-bar -->
+
 						<!-- Main Edit Area -->
-						<div class="col-md-8">
+						<div class="col-sm-7 col-sm-offset-3 col-md-8 col-md-offset-2 main">
 							<ol class="block connect-area serialize">
 								<li class="var-block">var msg = "Hello:" + name + "\n";</li>
 								<li class="var-block">var i=1;</li>
@@ -192,35 +195,41 @@
 						</div>
 						<!-- end of Main Edit Area-->
 						<!-- trash area-->
-						<div class="col-md-2">
+						<div class="col-sm-2 col-md-2">
 							<div class="sidebar-nav affix" role="complementary" data-toggle="tooltip" data-placement="top" title="double-click:clear">
+								<p></p>
 								<a class="trash" href="#" ondblclick="SORAMAME_BLOCK.clearTrash()"></a>
 								<ol id="trash-can" class="trash-code block connect-area"></ol>
 							</div>
 						</div>
 						<!-- end of trash area-->
 					</div>
-					<!-- end of tab body #1 -->
-					<!-- tab body #2 -->
+					<!-- end of tab item #1 -->
+
+					<!-- tab item #2 -->
 					<div class="col-md-2"></div>
 					<div class="tab-pane fade" id="menu2">
 						<pre>
-					<code class="js"></code>
-					</pre>
+							<code class="js"></code>
+						</pre>
 					</div>
 					<div class="col-md-"></div>
 				</div>
+				<!-- end of tab item #2 -->
 				<!-- end of tab body-->
 			</div>
-			<!-- end row -->
+			<!-- end of row -->
 		</div>
-		<!-- /container -->
+		<!-- end of container -->
+
 		<!-- Bootstrap core JavaScript ================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="lib/js/bootstrap.min.js"></script>
+		<script src="lib/js/docs.min.js"></script>
 		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 		<script src="lib/js/ie10-viewport-bug-workaround.js"></script>
+		<!-- SoraMame Block core JavaScript ================================================== -->
 		<script type="text/javascript" src="lib/js/jquery-sortable.js"></script>
 		<script type="text/javascript" src="lib/js/soramame.block.js"></script>
 		<script type="text/javascript" src="lib/js/beautify.js"></script>
