--- a/example_game.html
+++ b/example_game.html
@@ -99,6 +99,25 @@
 									<div class="panel panel-default">
 										<div class="panel-heading">
 											<h4 class="panel-title">
+												<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse13">Background </a>
+											</h4>
+										</div>
+										<!-- panel-collapse -->
+										<div id="collapse13" class="panel-collapse collapse">
+											<div class="panel-body">
+												<ol class="pallet-code block connect-area">
+													<li class="var-block">SORAMAME_BLOCK.test = {background: "sky"};</li>
+													<li class="var-block">SORAMAME_BLOCK.test = {background: "jungle"};</li>
+													<li class="var-block">SORAMAME_BLOCK.test = {background: "planet"};</li>
+												</ol>
+											</div>
+										</div>
+									</div>
+									<!-- end panel -->
+									<!-- start panel -->
+									<div class="panel panel-default">
+										<div class="panel-heading">
+											<h4 class="panel-title">
 												<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse12">IF </a>
 											</h4>
 										</div>
@@ -115,24 +134,6 @@
 													<li class="if-block">if ()</li>
 													<li class="if-block">else if ()</li>
 													<li class="if-block">else</li>
-												</ol>
-											</div>
-										</div>
-									</div>
-									<!-- end panel -->
-									<!-- start panel -->
-									<div class="panel panel-default">
-										<div class="panel-heading">
-											<h4 class="panel-title">
-												<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse13">LOOP </a>
-											</h4>
-										</div>
-										<!-- panel-collapse -->
-										<div id="collapse13" class="panel-collapse collapse">
-											<div class="panel-body">
-												<ol class="pallet-code block connect-area">
-													<li class="loop-block">while</li>
-													<li class="loop-block">for</li>
 												</ol>
 											</div>
 										</div>
@@ -167,6 +168,7 @@
 						<!-- Main Edit Area -->
 						<div class="col-sm-6 col-sm-offset-5 col-md-6 col-md-offset-5 main">
 							<ol class="block connect-area serialize">
+								<li class="comment-block">/* Set Message */</li>
 								<li class="comment-block">/* Set Background */</li>
 							</ol>
 						</div>
