you can set speed! however don't restart game.

--- a/example_game.html
+++ b/example_game.html
@@ -79,16 +79,17 @@
 									<div class="panel panel-default">
 										<div class="panel-heading">
 											<h4 class="panel-title">
-												<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse11">Message</a>
+												<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse11">Speed</a>
 											</h4>
 										</div>
 										<!-- panel-collapse -->
 										<div id="collapse11" class="panel-collapse collapse in">
 											<div class="panel-body">
 												<ol class="pallet-code block connect-area">
-													<li class="var-block">SORAMAME_BLOCK.test = {end_msg: "Hello Block123"};</li>
-													<li class="var-block">SORAMAME_BLOCK.test = {end_msg: "Hello Block456"};</li>
-													<li class="var-block">SORAMAME_BLOCK.test = {end_msg: "Hello Block789"};</li>
+													<li class="var-block">SORAMAME_BLOCK.test = {speed: 1};</li>
+													<li class="var-block">SORAMAME_BLOCK.test = {speed: 2};</li>
+													<li class="var-block">SORAMAME_BLOCK.test = {speed: 3};</li>
+													<li class="var-block">SORAMAME_BLOCK.test = {speed: 4};</li>
 													<li class="comment-block">/* comment */</li>
 												</ol>
 											</div>
@@ -106,7 +107,7 @@
 										<div id="collapse13" class="panel-collapse collapse">
 											<div class="panel-body">
 												<ol class="pallet-code block connect-area">
-													<li class="var-block">SORAMAME_BLOCK.test = {background: "sky"};</li>
+													<li class="var-block">SORAMAME_BLOCK.test = {background: "city"};</li>
 													<li class="var-block">SORAMAME_BLOCK.test = {background: "jungle"};</li>
 													<li class="var-block">SORAMAME_BLOCK.test = {background: "planet"};</li>
 												</ol>
@@ -168,7 +169,8 @@
 						<!-- Main Edit Area -->
 						<div class="col-sm-6 col-sm-offset-5 col-md-6 col-md-offset-5 main">
 							<ol class="block connect-area serialize">
-								<li class="comment-block">/* Set Message */</li>
+								<li class="comment-block">/* Set Speed */</li>
+								<li class="var-block">SORAMAME_BLOCK.test = {speed: 1};</li>
 								<li class="comment-block">/* Set Background */</li>
 							</ol>
 						</div>
